--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     </section>
     <div id="menubtn">
-       <img src="../img/tải xuống (2).jpg" id="munu" alt="">
+       <img src="./img/tải xuống (2).jpg" id="munu" alt="">
     </div>
     <!-- endsidenav -->
     <!-- feature -->
@@ -85,7 +85,7 @@
         </div>
     </div>
     <div class="feature-img">
-        <img src="../img/tải xuống (3).jpg" alt="">
+        <img src="./img/tải xuống (3).jpg" alt="">
     </div>
 </div>
      
